--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,116 @@
+aiohttp==3.3.2
+aiohttp-cors==0.7.0
+aniso8601==1.1.0
+appnope==0.1.0
+asn1crypto==0.24.0
+astroid==2.3.3
+async-timeout==3.0.0
+atomicwrites==1.1.5
+attrs==18.1.0
+autopep8==1.5
+backcall==0.1.0
 beautifulsoup4==4.9.0
+bleach==2.1.3
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
 click==7.1.2
+config==0.4.0
+cryptography==2.3
+cycler==0.10.0
+Cython==0.28.4
+decorator==4.3.0
+Django==1.11.7
+django-cors-headers==2.1.0
+django-rest-framework==0.1.0
+django-webpack-loader==0.5.0
+djangorestframework==3.7.3
+entrypoints==0.2.3
 Flask==1.1.2
 Flask-Cors==3.0.8
+Flask-RESTful==0.3.5
+Flask-SQLAlchemy==2.1
+future==0.16.0
+geocoder==1.38.1
 gunicorn==20.0.4
+html5lib==1.0.1
+idna==2.7
+ipykernel==4.8.2
+ipython==6.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.3.1
+isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.12.1
 Jinja2==2.11.2
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+kaggle==1.5.6
+kiwisolver==1.0.1
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==2.2.2
+mccabe==0.6.1
+mistune==0.8.3
+more-itertools==4.3.0
+multidict==4.3.1
+nbconvert==5.3.1
+nbformat==4.4.0
+ng==1.2.0
+notebook==5.6.0
+numpy==1.15.0
+pandas==0.23.3
+pandocfilters==1.4.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+pipenv==2018.7.1
+pluggy==0.7.1
+prometheus-client==0.3.1
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
+py==1.5.4
+pycodestyle==2.5.0
+pycparser==2.18
+Pygments==2.2.0
+pylint==2.4.4
+pyOpenSSL==18.0.0
+pyparsing==2.2.0
+pytest==3.7.1
+python-dateutil==2.5.3
 python-dotenv==0.13.0
+python-slugify==4.0.0
 pytz==2020.1
+pyzmq==17.1.0
+qtconsole==4.3.1
+ratelim==0.1.6
+requests==2.19.1
+rope==0.16.0
+scikit-learn==0.19.2
+scipy==1.1.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+simplejson==3.16.0
 six==1.14.0
 soupsieve==2.0
+SQLAlchemy==1.1.2
+terminado==0.8.1
+testpath==0.3.1
+text-unidecode==1.3
+tornado==5.1
+tqdm==4.24.0
+traitlets==4.3.2
+typed-ast==1.4.0
+Unidecode==0.4.21
+urllib3==1.23
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==1.0.1
+widgetsnbextension==3.3.1
+wrapt==1.11.2
+yarl==1.2.6
